{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 68,
  "lineage": "bafd027a-8198-f945-8cdf-c3156a5f0503",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wtp_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e2e94de097d3986",
            "arn": "arn:aws:ec2:eu-west-1:830193445063:instance/i-0a183128a91750d28",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wtp_ec2_profile",
            "id": "i-0a183128a91750d28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wtpkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-046d426718c97e4be",
            "private_dns": "ip-10-0-1-239.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_dns": "ec2-34-244-191-40.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.191.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007ead1ec869dd4ac",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e20ef3826239d5fb",
            "tags": {
              "Environment": "production",
              "Name": "wtp-ec2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00653fe988957a0b9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.wtp_ec2_profile",
            "aws_iam_role.wtp_ec2_role",
            "aws_key_pair.wtp_key",
            "aws_security_group.wtp_ec2_sg",
            "aws_subnet.wtp_public_subnet",
            "aws_vpc.wtp_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wtp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:internet-gateway/igw-0b6fd33115100d968",
            "id": "igw-0b6fd33115100d968",
            "owner_id": "830193445063",
            "tags": {
              "Environment": "production",
              "Name": "wtp-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-igw"
            },
            "vpc_id": "vpc-089bcd6be0e6bd3e9"
          },
          "dependencies": [
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b6fd33115100d968",
            "id": "r-rtb-09b0ba7e49c6ee83a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b0ba7e49c6ee83a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wtp_igw",
            "aws_route_table.wtp_public_rt",
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wtp_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:route-table/rtb-09b0ba7e49c6ee83a",
            "id": "rtb-09b0ba7e49c6ee83a",
            "owner_id": "830193445063",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "wtp-pub_rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bcd6be0e6bd3e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wtp_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058421681dc788ea1",
            "route_table_id": "rtb-09b0ba7e49c6ee83a",
            "subnet_id": "subnet-0e20ef3826239d5fb"
          },
          "dependencies": [
            "aws_route_table.wtp_public_rt",
            "aws_subnet.wtp_public_subnet",
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wtp_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:security-group/sg-00653fe988957a0b9",
            "description": "wtp security group for ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00653fe988957a0b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wtp-ec2_sg",
            "name_prefix": "",
            "owner_id": "830193445063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "wtp-ec2_sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bcd6be0e6bd3e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wtp_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:security-group/sg-0929eec6be6abcec5",
            "description": "wtp security group for rds instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0929eec6be6abcec5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00653fe988957a0b9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "wtp-rds_sg",
            "name_prefix": "",
            "owner_id": "830193445063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "wtp-rds_sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bcd6be0e6bd3e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wtp_ec2_sg",
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wtp_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:subnet/subnet-0d824acaaaff94fc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d824acaaaff94fc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "830193445063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "wtp-pri_subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-pri_subnet"
            },
            "vpc_id": "vpc-089bcd6be0e6bd3e9"
          },
          "dependencies": [
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wtp_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:subnet/subnet-0e20ef3826239d5fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e20ef3826239d5fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "830193445063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "wtp-pub_subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-pub_subnet"
            },
            "vpc_id": "vpc-089bcd6be0e6bd3e9"
          },
          "dependencies": [
            "aws_vpc.wtp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wtp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:830193445063:vpc/vpc-089bcd6be0e6bd3e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02710de0b965853a6",
            "default_route_table_id": "rtb-0ec260f002e7dcaae",
            "default_security_group_id": "sg-0dd0bd968b9eb2e67",
            "dhcp_options_id": "dopt-0df82b6fadf6bca94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-089bcd6be0e6bd3e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec260f002e7dcaae",
            "owner_id": "830193445063",
            "tags": {
              "Environment": "production",
              "Name": "wtp-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wtp-vpc"
            }
          }
        }
      ]
    }
  ]
}